src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 100 900;
  font-display: optional;
}

.sticky-nav {
  position: sticky;
  z-index: 10;
  top: 0;
}

.shiki {
  background-color: rgb(31 41 55) !important;
}

/* inline code */
.prose code:not(.shiki code) {
  @apply px-1 py-0.5 border rounded-md bg-gray-100 dark:bg-gray-800 dark:border-gray-800 text-gray-800 dark:text-white;
}

